objects/User_Commission_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Band_1_Max__c</fullName>
        <label>Band 1 Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Band_1_Pct__c</fullName>
        <label>Band 1 Pct</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Band_2_Max__c</fullName>
        <label>Band 2 Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Band_2_Pct__c</fullName>
        <label>Band 2 Pct</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Band_3_Pct__c</fullName>
        <label>Band 3 Pct</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multi_Year_Paid_Upfront_Pct__c</fullName>
        <label>Multi-Year Paid Upfront Pct</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multi_Year_Pct__c</fullName>
        <label>Multi-Year Pct</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <label>Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Commission_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>User Commission Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quota__c</columns>
        <columns>Band_1_Pct__c</columns>
        <columns>Band_2_Pct__c</columns>
        <columns>Band_3_Pct__c</columns>
        <columns>Multi_Year_Pct__c</columns>
        <columns>Multi_Year_Paid_Upfront_Pct__c</columns>
        <columns>Band_1_Max__c</columns>
        <columns>Band_2_Max__c</columns>
        <columns>Year__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>User Commission Plan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Commission Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>